# pool

./: README.md  pyproject.toml
src/: .gitignore
src/pool_cli/: cache.py  core.py  costing.py  evaluation.py  main.py  pools.py  runtime_defaults.json  user_pools.py
src/pool_cli/openai_api/: __init__.py  analyzer.py  prompts.py
src/pool_cli/siglip/: __init__.py  classification.py  ops.py
